--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 </head>
 <body>
     <div class="contenitore">   
-        <header>
-            
+        <header> 
             <div class="navbar">
                 <a href="https://imgbb.com/"><img src="https://i.ibb.co/dWcRJ9p/space-hub-logo.png" alt="space-hub-logo" border="0" title="Il tuo hub spaziale per serie stellari!"></a>
                 <div class="navbarElements">
@@ -26,25 +25,27 @@
                 </div>
             </div>
         </header>
-    <div class="fakeTrailer">
-        <img src="https://picsum.photos/1990/600" alt="fake trailer picture">
-        <div class="top-left">
-            <h1>Titolo</h1>
-            <h3>#1 in Serie TV oggi</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores saepe sequi fugiat dolor aliquam adipisci nulla quibusdam, voluptatibus ab reiciendis doloribus similique, quam sint officia numquam ducimus error, dolorum optio.</p>
-        </div>
-        <div class="bottom-left">
-            <button>Play ▶️</button>
-        </div>
-    </div>
-        <div class="carouselContainer">
-            <div class="carouselTopTen">
-                <h4>Top 10 serie TV stellari della settimana</h4>
+        <div class="fakeTrailer">
+            <img src="https://picsum.photos/1990/600" alt="fake trailer picture">
+            <div class="top-left">
+                <h1>Titolo</h1>
+                <h3>#1 in Serie TV oggi</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores saepe sequi fugiat dolor aliquam adipisci nulla quibusdam, voluptatibus ab reiciendis doloribus similique, quam sint officia numquam ducimus error, dolorum optio.</p>
+                <button>Play ▶️</button>
             </div>
-            <div class="carouselCard">
+            <div class="bottom-left">
                 
-                <img src="https://picsum.photos/300/200" alt="fake tv series picture">
             </div>
+        </div>
+        <div class="carouselContainer">
+             <div class="carouselTopTen">
+                <h4> ✨ Top 20 serie TV stellari della settimana</h4>
+            </div>
+             <!-- <div class="carouselCard">
+                <h4 id="tvSerieTitle"></h4>
+                <img id="tvSerieImg" src="https://picsum.photos/300/200" alt="fake tv series picture">
+                <p id="tvSerieDesc"></p>
+            </div>  -->
         </div>
     </div>
     <footer>
