css responsive add

--- a/tvSeries.html
+++ b/tvSeries.html
@@ -27,7 +27,7 @@
         </header>
 
         <div class="button">
-            <button onclick="location.href = '/index.html';"> 🡠 Torna indietro</button>
+            <button id="btn" onclick="location.href = '/index.html';"> 🡠 Torna indietro</button>
         </div>
 
         <div class="tvSerieSchedaWrapper">
