--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
             </div>
         </header>
         <div class="fakeTrailer">
-            <img src="https://picsum.photos/1990/600" alt="fake trailer picture">
             <div class="top-left">
-                <h1>Titolo</h1>
-                <h3>#1 in Serie TV oggi</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores saepe sequi fugiat dolor aliquam adipisci nulla quibusdam, voluptatibus ab reiciendis doloribus similique, quam sint officia numquam ducimus error, dolorum optio.</p>
+                <h1 id="titoloTrailer">Titolo</h1>
+                <h3 id="posizioneTrailer">#1 in Serie TV oggi</h3>
+                <p id="descTrailer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores saepe sequi fugiat dolor aliquam adipisci nulla quibusdam, voluptatibus ab reiciendis doloribus similique, quam sint officia numquam ducimus error, dolorum optio.</p>
                 <button>Play ▶️</button>
             </div>
             <div class="bottom-left">
