--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="contenitore">   
         <header> 
             <div class="navbar">
-                <a href="https://imgbb.com/"><img src="https://i.ibb.co/dWcRJ9p/space-hub-logo.png" alt="space-hub-logo" border="0" title="Il tuo hub spaziale per serie stellari!"></a>
+                <img src="https://i.ibb.co/dWcRJ9p/space-hub-logo.png" alt="space-hub-logo" border="0" title="Il tuo hub spaziale per serie stellari!">
                 <div class="navbarElements">
                     <ul>
                         <li> ✨ Le migliori serie TV del 2022</li>
@@ -26,6 +26,7 @@
             </div>
         </header>
         <div class="fakeTrailer">
+            <img id="imgTrailer" src="https://picsum.photos/1990/600" alt="fake trailer picture">
             <div class="top-left">
                 <h1 id="titoloTrailer">Titolo</h1>
                 <h3 id="posizioneTrailer">#1 in Serie TV oggi</h3>
